--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -17,6 +17,34 @@ body {
   overflow: hidden;
 }
 
+dl,
+ol,
+ul {
+  top: 0;
+  display: inline-flex;
+}
+
+li {
+  display: inline;
+}
+
+.custom-footer {
+  margin-top: 10px !important;
+}
+
+.show-footer > div > ul > li > div {
+  width: 800px;
+}
+.nav.navbar-nav.footer-custom {
+  display: inline-flex;
+  width: 800px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  position: absolute;
+  background: green;
+}
+
 .table {
   width: 100%;
   max-width: 100%;
@@ -46,6 +74,94 @@ body {
   color: rgba(0, 0, 0, .6);
 }
 
+.btn-custom.share-location,
+.btn-custom.share-location:hover,
+.btn-custom.share-location:active,
+.btn-custom.share-location:focus {
+  border: 1px solid #337ab7;
+  width: 160px;
+  position: relative;
+  font-weight: 400;
+  text-decoration: none;
+  height: 30px;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  color: #517fa4;
+  background: white;
+  left: 0;
+  right: 0;
+  top: 9px;
+  bottom: 0;
+  margin: auto;
+}
+
+.btn-custom.share-file,
+.btn-custom.share-file:hover,
+.btn-custom.share-file:active,
+.btn-custom.share-file:focus {
+  position: relative;
+  border: 1px solid #337ab7;
+  width: 160px;
+  font-weight: 400;
+  text-decoration: none;
+  height: 30px;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  color: #517fa4;
+  background: #fff;
+  left: 0;
+  right: 0;
+  top: 9px;
+  bottom: 0;
+  margin: auto;
+}
+
+.btn-custom.record-session,
+.btn-custom.record-session:hover,
+.btn-custom.record-session:active,
+.btn-custom.record-session:focus {
+  position: relative;
+  border: 1px solid #337ab7;
+  width: 160px;
+  font-weight: 400;
+  text-decoration: none;
+  height: 30px;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  color: #517fa4;
+  background: #fff;
+  left: 0;
+  right: 0;
+  top: 9px;
+  bottom: 0;
+  margin: auto;
+}
+
+.btn-custom.disconnect,
+.btn-custom.disconnect:hover,
+.btn-custom.disconnect:active,
+.btn-custom.disconnect:focus {
+  position: relative;
+  border: 1px solid #337ab7;
+  width: 160px;
+  font-weight: 400;
+  text-decoration: none;
+  height: 30px;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  color: #517fa4;
+  background: #fff;
+  left: 0;
+  right: 0;
+  top: 9px;
+  bottom: 0;
+  margin: auto;
+}
+
 .btn-custom.create-a-broadcast,
 .btn-custom.create-a-broadcast:hover,
 .btn-custom.create-a-broadcast:active,
@@ -60,7 +176,7 @@ body {
   text-align: center;
   cursor: pointer;
   color: #517fa4;
-top: 122px;
+  top: 122px;
   margin: auto;
   left: 0;
   right: 0;
