--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -1,3 +1,83 @@
+.create-a-room-container {
+  text-align: center;
+  position: relative;
+  margin-top: -119px;
+}
+
+.room-option-copy {
+  font-size: 16px;
+  color: rgba(0, 0, 0, .7);
+}
+
+hr.room-option-line {
+  color: black;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, .3);
+  margin: -7px 0 0 0;
+}
+
+.welcome-user.add-opacity {
+  opacity: 1;
+  color: rgba(0, 0, 0, .8);
+  font-size: 15px;
+  text-align: center;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 74px;
+  bottom: 0;
+}
+
+.welcome-user {
+  opacity: 0;
+}
+
+#userNameForm {
+  position: relative;
+  top: 250px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+#ngdialog1 > div.ngdialog-content > div.ngdialog-close {
+  display: none !important;
+}
+
+p.enter-username {
+  outline: 0px;
+  position: fixed;
+  color: white;
+  font-size: 22px;
+  font-weight: 300;
+  left: 0;
+  right: 0;
+  top: 200px;
+  bottom: 0;
+  text-align: center;
+}
+
+.ngdialog-overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, .9);
+  -webkit-backface-visibility: hidden;
+  -webkit-animation: ngdialog-fadein .5s;
+  animation: ngdialog-fadein .5s;
+  width: 90%;
+  height: 90%;
+  border: 1px solid white;
+  margin: auto;
+}
+
+.ngdialog-content {
+  background: transparent;
+  -webkit-backface-visibility: hidden;
+  -webkit-animation: ngdialog-fadein .5s;
+  animation: ngdialog-fadein .5s;
+}
+
 .row-block {
   margin-right: -15px;
   margin-left: -15px;
