--- a/client/views/session.html
+++ b/client/views/session.html
@@ -1,1 +1,77 @@
 <div ng-init='sessionCtrl.init();'></div>
+<div id="layout-container"></div>
+<div class="span2 sidebar">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="portlet portlet-default">
+          <div class="portlet-heading">
+            <div class="portlet-title">
+              <h4><i class="fa fa-circle text-green"></i> {{ user.username }}</h4>
+            </div>
+            <div class="portlet-widgets">
+              <div class="btn-group">
+                <button type="button" class="btn btn-white dropdown-toggle btn-xs" data-toggle="dropdown">
+                  <i class="fa fa-circle text-green"></i> Status
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#"><i class="fa fa-circle text-green"></i> Online</a>
+                  </li>
+                  <li><a href="#"><i class="fa fa-circle text-orange"></i> Away</a>
+                  </li>
+                  <li><a href="#"><i class="fa fa-circle text-red"></i> Disconnect</a>
+                  </li>
+                </ul>
+              </div>
+              <span class="divider"></span>
+              <a data-toggle="collapse" data-parent="#accordion" href="#chat"><i class="fa fa-chevron-down"></i></a>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div id="chat" class="panel-collapse collapse in">
+            <div>
+              <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <p class="text-center text-muted small">{{ sessionStart }}</p>
+                  </div>
+                </div>
+                <div class='chatbox'>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="media">
+                        <a class="pull-left" href="">
+                          <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/1/" alt="">
+                        </a>
+                        <div class="media-body">
+                          <h4 class="media-heading sent-by">
+                                        {{ user.username }} @
+                                            <span>{{ timeSent }}</span>
+                                        </h4>
+                          <p class='chat-text'>Hi, I wanted to make sure you got the latest product report. Did Roddy get it to you?</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <hr>
+                </div>
+              </div>
+            </div>
+            <div class="portlet-footer">
+              <form role="form">
+                <div class="form-group">
+                  <textarea ng-model='user.message' class="form-control" placeholder="Enter message..."></textarea>
+                </div>
+                <div class="form-group">
+                  <div ng-click='sessionCtrl.sendMessage()' class="btn-custom-send pull-right">Send</div>
+                  <div class="clearfix"></div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
