adds capitilization filter, styles file shared reciept

--- a/client/views/session.html
+++ b/client/views/session.html
@@ -37,7 +37,7 @@
                     <p class="text-center text-muted small">{{ sessionStart }}</p>
                   </div>
                 </div>
-                <div class='chatbox'>
+                <div id='chatbox' class='chatbox'>
                 </div>
               </div>
             </div>
