--- a/client/styles/session.css
+++ b/client/styles/session.css
@@ -2,9 +2,8 @@ hr.chat-line {}
 
 a.download-link {
   text-decoration: none;
-  color: #337ab7;
+  color: #16a085;
   font-size: 13px;
-  float: left;
   margin-top: -8px;
 }
 
