--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -1,3 +1,8 @@
+.fa.fa-circle-o-notch.fa-spin {
+  font-size: 34px;
+  margin-top: 20px;
+}
+
 input.input-small#create-room-input[type=text] {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
