--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,4 +1,4 @@
-<div class="container" ng-init="landingCtrl.isAuthenticated();">
+<div ng-show='showLanding' class="container" ng-init="landingCtrl.isAuthenticated();">
   <div class="col-md-12 text-center">
     <div class="row vertical-align-landing">
       <div class="cover">
