--- a/server/views/index.html
+++ b/server/views/index.html
@@ -33,20 +33,11 @@
     location.href = location.href.substring(0, location.href.length - 3);
   }
   </script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSwdeS2w3hUU2qEjeKZmKc9_tQUHHIabs">
+  </script>
 </head>
 
 <body ng-app="RoomBaby">
-  <div id="fb-root"></div>
-  <script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=921064881267563&version=v2.3";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-  </script>
   <nav ng-class="{'show-nav-bar': ( showNavBar )}" ng-controller='NavBarCtrl as navBarCtrl' ng-init='navBarCtrl.registerEvents();' class="navbar navbar-custom navbar-static-top">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -90,15 +81,15 @@
         </li>
       </ul>
       <ul ng-show='showUpload' class="custom footer">
-      <li>
-        <form id='uploadForm'>
-          <div class='fileUpload btn btn-default btn-sm btn-upload'>
-            <input type='file' upload='fileUpload' class='upload' />
-          </div>
-          <button ng-click='footerCtrl.collectUpload();' class='btn btn-default btn-sm btn-upload' type='button'>submit</button>
-        </form>
+        <li>
+          <form id='uploadForm'>
+            <div class='fileUpload btn btn-default btn-sm btn-upload'>
+              <input type='file' upload='fileUpload' class='upload' />
+            </div>
+            <button ng-click='footerCtrl.collectUpload();' class='btn btn-default btn-sm btn-upload' type='button'>submit</button>
+          </form>
         </li>
-        </ul>
+      </ul>
     </div>
   </div>
   </div>
@@ -107,7 +98,6 @@
   <script src="/scripts/lib/opentok-min.js"></script>
   <script src="/scripts/lib/opentok-layout.min.js"></script>
   <script src="/scripts/lib/tipped.min.js"></script>
-  <script src="/scripts/lib/googleMaps.js"></script>
   <script src="/build/dev.min.js"></script>
 </body>
 
