--- a/client/styles/navbar.css
+++ b/client/styles/navbar.css
@@ -1,3 +1,39 @@
+p.welcome-username {
+  font-size: 14px;
+  position: relative;
+  top: 18px;
+  right: 40px;
+  padding-right: 10px;
+  color: rgba(0, 0, 0, .6);
+}
+
+.navbar-nav>li>.dropdown-menu {
+  margin-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-right: 22px;
+  top: 50px;
+  background-color: #efefef;
+  border: 1px solid rgba(0, 0, 0, .8);
+  border-top: transparent;
+}
+
+.media-object.img-circle-navbar {
+  width: 45px;
+  height: 45px;
+  background-color: transparent;
+  position: absolute;
+  bottom: 0;
+  left: -8px;
+  top: 23px;
+  margin: auto;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  border: 1px solid rgba(0, 0, 0, .7);
+}
+
 .navbar.navbar-custom.navbar-static-top {
   opacity: 0;
 }
@@ -13,7 +49,6 @@
 .navbar.navbar-default.navbar-fixed-bottom.show-footer {
   opacity: 1;
 }
-
 
 .navbar-custom {
   background-color: #efefef;
@@ -31,6 +66,7 @@ ul.nav.navbar-nav.footer-custom {
   width: 1000%;
   text-align: center;
 }
+
 .navbar-custom .navbar-nav > li > a {
   color: rgba(0, 0, 0, .7);
   padding-left: 20px;
