--- a/server/views/index.html
+++ b/server/views/index.html
@@ -50,9 +50,10 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right ">
+        <p class='welcome-username'>Welcome {{ user.username | capitalize }}!</p>
         <li class="dropdown-toggle menu col-sm-pull-2">
           <a class="dropdown-toggle" data-toggle="dropdown">
-            <div class="btn-custom-nav my-account">{{ user.username | capitalize }}</div>
+            <img class="media-object img-circle-navbar" ng-src="{{user.profileImage | trusted}}">
           </a>
           <ul class="dropdown-menu">
             <li><a href="">Settings</a></li>
