--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -56,7 +56,7 @@ hr.room-option-line {
 
 #userNameForm {
   position: absolute;
-  top: 260px;
+  top: 278px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -71,11 +71,11 @@ p.enter-username {
   outline: 0;
   position: absolute;
   color: #fff;
-  font-size: 22px;
+  font-size: 19px;
   font-weight: 300;
   left: 0;
   right: 0;
-  top: 200px;
+  top: 234px;
   bottom: 0;
   text-align: center;
   white-space: nowrap;
@@ -83,11 +83,11 @@ p.enter-username {
 
 .ngdialog-overlay {
   position: relative;
-  background: rgba(0,0,0,.7);
+  background: rgba(0, 0, 0, .7);
   -webkit-backface-visibility: hidden;
   animation: ngdialog-fadein .5s;
-  width: 75%;
-  min-width: 600px;
+  width: 54%;
+  min-width: 540px;
   height: 300px;
   border: 1px solid #fff;
   margin: auto;
