--- a/server/views/index.html
+++ b/server/views/index.html
@@ -75,7 +75,7 @@
           <div ng-click='footerCtrl.options("upload")' class="btn-custom share-file">share a file</div>
         </li>
         <li>
-          <div ng-click='footerCtrl.options("record")' class="btn-custom record-session">record session</div>
+          <div ng-click='footerCtrl.options("record:start")' class="btn-custom record-session">record session</div>
         </li>
         <li>
           <div ng-click='footerCtrl.options("disconnect")' class="btn-custom disconnect">disconnect</div>
