updates s3 file share bucket, refactors transport service to expose one method

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -77,7 +77,10 @@
           <div ng-click='footerCtrl.options("upload")' class="btn-custom share-file">share a file</div>
         </li>
         <li>
-          <div ng-click='footerCtrl.options("record:start")' class="btn-custom record-session">record session</div>
+          <div ng-click='footerCtrl.options("record")' class="btn-custom record-session">record session</div>
+        </li>
+        <li>
+          <div ng-click='footerCtrl.options("stop")' class="btn-custom record-session">stop recording</div>
         </li>
         <li>
           <div ng-click='footerCtrl.options("disconnect")' class="btn-custom disconnect">disconnect</div>
