--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -1,3 +1,16 @@
+#permission-granted {
+  margin-left: -41px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #16a085;
+}
+
+#permission-denied {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #16a085;
+}
+
 .media-object.img-circle {
   width: 35px;
   height: 35px;
