--- a/server/views/index.html
+++ b/server/views/index.html
@@ -93,8 +93,8 @@
   <script src="/build/vendor.min.js"></script>
   <script src="/scripts/lib/opentok-min.js"></script>
   <script src="/scripts/lib/opentok-layout.min.js"></script>
-  <script src="/scripts/lib/tipped.min.js"></script>
   <script src="/build/dev.min.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 </body>
 
 </html>
