--- a/client/styles/navbar.css
+++ b/client/styles/navbar.css
@@ -1,3 +1,7 @@
+div.collapse.navbar-collapse > ul > li > a {
+  top: 4px;
+  right: 6px;
+}
 
 p.welcome-username {
   font-size: 14px;
@@ -17,6 +21,7 @@ p.welcome-username {
   background-color: #efefef;
   border: 1px solid rgba(0, 0, 0, .8);
   border-top: transparent;
+  position: fixed;
 }
 
 .media-object.img-circle-navbar {
@@ -24,9 +29,8 @@ p.welcome-username {
   height: 45px;
   background-color: transparent;
   position: absolute;
-  bottom: 0;
-  left: -8px;
-  top: 23px;
+  top: 0px;
+  right: 0;
   margin: auto;
   border-radius: 50%;
   background-repeat: no-repeat;
