--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,4 +1,4 @@
-<div ng-show='showLanding' class="container" ng-init="landingCtrl.isAuthenticated();">
+<div ng-show='showLanding' class="container landing-container" ng-init="landingCtrl.isAuthenticated();">
   <div class="col-md-12 text-center">
     <div class="row vertical-align-landing">
       <div class="cover">
@@ -10,10 +10,11 @@
           <br>
           <br>
           <div class="landing-btn-container">
-            <a id='login' ng-click="landingCtrl.selectedOpt('login');" class="btn btn-md btn-custom-landing">Login</a>
-            <a id='register' ng-click="landingCtrl.selectedOpt('register');" class="btn btn-md btn-custom-landing">Register</a>
-            <a id='facebook' ng-click="landingCtrl.selectedOpt('facebook');" class="btn btn-md btn-custom-landing">Facebook</a>
-            <a id='learn' ng-click="landingCtrl.selectedOpt('learn-more');" class="btn btn-md btn-custom-landing">Learn More</a>
+            <div class="facebook-btn-container">
+              <a id='facebook' ng-click="landingCtrl.selectedOpt('facebook');" class="btn btn-md btn-custom-facebook"><i class="fa fa-facebook"></i>Connect With Facebook</a>
+              <span class="or-copy">or</span>
+              <a id='email' ng-click="landingCtrl.selectedOpt('login');" class="btn btn-md btn-custom-email"><i class="fa fa-envelope"></i>Connect With Email</a>
+            </div>
           </div>
         </div>
         <!-- *** End Landing Options Container *** -->
@@ -22,7 +23,7 @@
           <form id="loginForm" name="authForm" class="form-inline" ng-submit="landingCtrl.submitForm('login');">
             <input id="landing-input-email" class="input-small" ng-model="user.email" name="email" type="text" placeholder="Email">
             <input id="landing-input-password" class="input-small" ng-model="user.password" type="password" name="password" placeholder="Password">
-            <button type="submit" class="btn btn-custom-landing">Login</button>
+            <button type="submit" class="btn btn-custom-login">Login</button>
             <br>
             <div class="check-box-container">
               <p ng-click="landingCtrl.selectedOpt('register');" class="auth-sub-menu add-cursor">need an account?
@@ -31,9 +32,7 @@
                 <span id="remember-me"> remember me <input type="checkbox"></span>
             </div>
           </form>
-          <div class='go-back-container add-cursor'>
-            <i class="fa fa-backward"><span ng-click="landingCtrl.goBack();" class="go-back-copy">back</span> </i>
-          </div>
+          <a id='login' ng-click="landingCtrl.goBack();" class="btn btn-md btn-custom-back">Back</a>
         </div>
         <!-- *** End Login Container *** -->
         <!-- *** Begin Register Container *** -->
@@ -48,9 +47,7 @@
                 <span class="add-line-opacity add-cursor">|</span> forgot password?
             </div>
           </form>
-          <div class='go-back-container add-cursor'>
-            <i class="fa fa-backward"><span ng-click="landingCtrl.goBack();" class="go-back-copy">back</span> </i>
-          </div>
+          <a id='login' ng-click="landingCtrl.goBack();" class="btn btn-md btn-custom-back">Back</a>
         </div>
         <!-- *** End Register Container *** -->
       </div>
