--- a/client/views/session.html
+++ b/client/views/session.html
@@ -31,7 +31,7 @@
           </div>
           <div id="chat" class="panel-collapse collapse in">
             <div>
-              <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
+              <div id="transport-container" class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
                 <div class="row">
                   <div class="col-lg-12">
                     <p class="text-center text-muted small">{{ sessionStart }}</p>
