--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,3 +1,40 @@
+p.landing-err-message {
+  color: orange;
+  position: relative;
+  top: 22px;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.register-btn-container {
+  top: 25px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+}
+
+form.register-form {
+  display: block;
+  padding-bottom: 10px;
+  color: #fff;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
+
+.register-container {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  margin: auto;
+}
+
 .fa.fa-facebook {
   position: absolute;
   top: 7px;
