--- a/client/views/ngDialog/facebook.html
+++ b/client/views/ngDialog/facebook.html
@@ -1,6 +1,6 @@
 <div class='overlay' ng-controller='FooterCtrl as footerCtrl'>
   <p class='enter-username'>Please enter a username to identify yourself in the room</p>
-  <form id="userNameForm" name="authForm" class="form-inline" ng-submit="footerCtrl.submitUserName();">
+  <form id="userNameForm" name="authForm" class="form-inline" ng-submit="footerCtrl.onUserName();">
     <input id="landing-input-email" class="input-small" ng-model="user.username" name="username" type="text" placeholder="Username">
     <button type="submit" class="btn btn-custom-landing">Submit</button>
   </form>
