--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,17 +1,15 @@
-<div ng-show='showLanding' class="container landing-container" ng-init="landingCtrl.isAuthenticated();">
+<ng-enter>
+<div ng-show='showLanding' class="container landing-container" ng-init="landingCtrl.isAuthenticated(); landingCtrl.registerEvents();">
   <div class="col-md-12 text-center">
     <div class="row vertical-align-landing">
       <div class="cover">
         <p ng-click='landingCtrl.reloadState();' id='room-baby' class="text-inverse logo-text cursor-pointer">room baby</p>
         <hr class="landing-line">
         <!-- *** Begin Landing Options Container *** -->
-        <div ng-show='showRegister' class="landing-sub-text-container">
+        <div class="landing-sub-text-container">
           <p class="text-inverse slogan-text">a room for every occassion</p>
         </div>
-        <div ng-hide="showLogin || showRegister || showLearnMore" class="landing-sub-text-container">
-          <p class="text-inverse slogan-text">a room for every occassion</p>
-          <br>
-          <br>
+        <div ng-hide="showLogin || showRegister" class="landing-sub-text-container">
           <div class="landing-btn-container">
             <div class="facebook-btn-container">
               <a id='facebook' ng-click="landingCtrl.selectedOpt('facebook');" class="btn btn-md btn-custom-facebook"><i class="fa fa-facebook"></i>Connect With Facebook</a>
@@ -22,10 +20,10 @@
         </div>
         <!-- *** End Landing Options Container *** -->
         <!-- *** Begin Login Container *** -->
-        <div ng-show="showLogin" class='auth-container'>
+        <div ng-show="showLogin" class='login-container' class='auth-container'>
           <form id="loginForm" name="authForm" class="form-inline" ng-submit="landingCtrl.onLogin();">
-            <input id="landing-input-email" class="input-small" ng-model="user.email" name="email" type="text" placeholder="Email">
-            <input id="landing-input-password" class="input-small" ng-model="user.password" type="password" name="password" placeholder="Password">
+            <input id="login-input" class="input-small" ng-model="user.email" name="email" type="text" placeholder="Email">
+            <input id="login-input" class="input-small" ng-model="user.password" type="password" name="password" placeholder="Password">
             <button type="submit" class="btn btn-custom-login">Login</button>
             <br>
             <div class="check-box-container">
@@ -43,6 +41,9 @@
         <!-- *** End Login Container *** -->
         <!-- *** Begin Register Container *** -->
         <div ng-show="showRegister" class='register-container' ng-hide='showLoadingSpinner'>
+          <div class="register-animation">
+            <p id='register-copy'>please enter a username, email and password</p>
+          </div>
           <form class='register-form' class="form-inline">
             <input id="register-input" class="input-small" ng-model="user.username" name="username" type="text" placeholder="username">
             <input id="register-input" class="input-small" ng-model="user.email" name="email" type="text" placeholder="email">
@@ -61,3 +62,4 @@
     </div>
   </div>
 </div>
+</ng-enter>
